# jwks-auth-service

./: .editorconfig  .env.example  .gitignore  .svnignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
alembic/: env.py
alembic/versions/: 28e12ed53b28_add_menu.py  30bd8ec8e9d0_change_auth_model_bigint_to_int.py  8eb9099de265_init_schema.py
src/: cache_utils.py  config.py  database.py  exceptions.py  main.py  middleware.py
src/admin/: router.py
src/app/: models.py  router.py  schemas.py
src/auth/: router.py
src/example/: models.py  router.py  schema.py
src/user/: models.py  router.py  schemas.py
src/utils/: common.py  history.py  paging.py  roles.py  security.py
static/css/: tailwind.css
static/js/: common.js
templates/: base.html  error.html  header.html  main.html  modal.html  nav.html
templates/admin/: apps.html  users.html
templates/app/: list.html
templates/user/: signin.html  signup.html
