[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "auth service"
authors = ["Jae Hong Kim"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"
jinja2 = "^3.1.4"
itsdangerous = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
alembic = "^1.14.0"
cryptography = "^46.0.1"
bcrypt = "^4.3.0"
aiomysql = "^0.2.0"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = "^1.7.4"
uvicorn = "^0.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"